[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = "2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

[profile.release]
opt-level = 3
